@@ -1,0 +1,6 @@
+Function: nfmodpr
+Section: number_fields
+C-Name: nfmodpr
+Prototype: GGG
+Help: nfmodpr(nf,x,pr): map x to the residue field mod pr
+Doc: map $x$ to the residue field modulo \var{pr}
