@@ -1863,8 +1863,9 @@ GEN     nfX_to_FqX(GEN x, GEN nf,GEN modpr);
 GEN     nfbasis(GEN x, GEN *y,GEN p);
 GEN     nfcompositum(GEN nf, GEN A, GEN B, long flag);
 void    nfmaxord(nfmaxord_t *S, GEN T, long flag);
-GEN     nfmodpr(GEN nf, GEN x, GEN modpr);
+GEN     nfmodpr(GEN nf, GEN x, GEN pr);
 GEN     nfmodprinit(GEN nf, GEN pr);
+GEN     nfmodprlift(GEN nf, GEN x, GEN pr);
 GEN     nfreducemodpr(GEN nf, GEN x, GEN modpr);
 GEN     nfsplitting(GEN T, GEN D);
 GEN     polcompositum0(GEN P, GEN Q,long flag);
