@@ -1,22 +1,22 @@
 nfeltmulmodpr(nfinit(x),x,x,1);
 v=[0,1/3,y,z,[1,1/3]~, [1,1,1/3]~];
 test(P) =
-{ my(f);
+{ my(f, V = apply(t->iferr(nfmodpr(K,t,P),E,E),v));
+
+  print(V);
+  V = select(t->type(t)!="t_ERROR", V);
   print(K.pol, ": ", P);
-  f=[nfeltdivmodpr,nfeltmulmodpr];
-  for (i=1,#v,
-    for (j=i,#v,
+  f=[(x,y)->x/y, (x,y)->x*y];
+  for (i=1,#V,
+    for (j=i,#V,
       print("*",[i,j],":");
-      for (k=1, #f,
-        print(iferr(f[k](K,v[i],v[j],P),E,E))
-      )
+      for (k=1, #f, print(iferr(f[k](V[i],V[j]), E,E)))
     )
   );
-  f=[(K,x,P)->nfeltpowmodpr(K,x,-3,P),nfeltreducemodpr];
   for(i=1,#v,
     print("*",i,":");
-    for(k=1, #f,  print(iferr(f[k](K,v[i],P),E,E)))
-  )
+    print(iferr(nfeltreducemodpr(K,v[i],P), E,E));
+  );
 }
 K=nfinit(y^2+1);
 P = nfmodprinit(K,idealprimedec(K,2)[1]); test(P);
@@ -28,13 +28,18 @@ K=nfinit(y^2-1105);
 P = nfmodprinit(K,idealprimedec(K,2)[1]);
 nfeltreducemodpr(K,(-y+1)/2,P)
 nffactormod(K, x^3+y*x^2+y*x+1, P)
-m=[1,y;[1/2,1/2]~,1]; v = [1,y]~
-nfkermodpr(K, m, P)
-nfsolvemodpr(K, m, v, P)
-m=[y,y^2;y^2,y^3]
-nfkermodpr(K, m, P)
-nfsolvemodpr(K, m, v, P)
-nfsolvemodpr(K, m, m, P)
+
+PU(x)=apply(t->nfmodpr(K,t,P),x);
+LI(x)=nfmodprlift(K,x,P);
+
+m=PU([1,y;[1/2,1/2]~,1]); v = PU([1,y]~)
+LI(matker(m))
+LI(matsolve(m,v))
+
+m=PU([y,y^2;y^2,y^3])
+LI(matker(m))
+LI(matsolve(m,v))
+LI(matsolve(m,m))
 
 K=nfinit(charpoly(Mod(2*x+1,polcyclo(51))));
 P=idealprimedec(K,2)[1];
