@@ -11,6 +11,7 @@ Done for version 2.8.1 (released ??/??/2016):
     3- [libpari] checkprid_i, is_nf_factor, is_nf_extfactor
     4- extend ellissupersingular for E/nf
     5- added a tag Obsolete: to the RFC822 description system (pari.desc)
+    6- new GP functions nfmodpr, nfmodprlift
 
   Changed
     1- remove useless flag in idealappr: directly allow factorization
